--- a/study-react/basic/basic-app01/src/index.css
+++ b/study-react/basic/basic-app01/src/index.css
@@ -1,9 +1,5 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
-  margin: auto;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
