--- a/study-pythonweb/django_web/mysite/main/templates/main/blog.html
+++ b/study-pythonweb/django_web/mysite/main/templates/main/blog.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dJango Main</title>
+    <title>dJango Blog</title>
     {% load static %}
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
-    <h1>dJango Main Page</h1>
+    <h1>dJango Blog Page</h1>
     {% load static %}
-    <img src="{% static 'cebu01.png' %}" alt="cebu image">
+    <img src="{% static 'cebu02.jpg' %}" alt="cebu image">
 </body>
 </html>
